fix: prevent search result overflow on floating design

--- a/themes/floating.css
+++ b/themes/floating.css
@@ -44,6 +44,8 @@ body > div {
   height: auto !important;
   min-height: auto !important;
   white-space: nowrap;
+
+  max-width: 50%;
 }
 
 .result-entry {
@@ -64,6 +66,11 @@ body > div {
 
 .result {
   height: 100%;
+}
+
+.result * {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .context-menu {
